--- a/temp_ari.html
+++ b/temp_ari.html
@@ -37,16 +37,15 @@
 
     const compare = () =>{
       let inputValue = document.getElementById("userinput").value; 
-      let OriginValue = document.getElementById("text").value;
+      let OriginValue = allWord[questWord];
       document.getElementById("showinput").innerHTML = inputValue; 
-      console.log(inputValue);
-      console.log(OriginValue);
-    //   if( inputValue === OriginValue){
-    //     console.log("ture");
-    //   }
-    //   else {
-    //     console.log("false");
-    //   }
+     
+      if( inputValue === OriginValue){
+        console.log("ture");
+      }
+      else {
+        console.log("false");
+      }
     };
 
  
