--- a/temp_ari.html
+++ b/temp_ari.html
@@ -41,15 +41,14 @@
       document.getElementById("showinput").innerHTML = inputValue; 
      
       if( inputValue === OriginValue){
-        console.log("ture");
+        console.log("You win");
       }
       else {
-        console.log("false");
+        console.log("You lose");
       }
     };
 
  
-
 
 
     function setCondition() {
@@ -80,13 +79,6 @@
         console.log("random result: "+allWord[questWord]);
     }
 
-
-    // if (allWord[questWord] === document.getElementById("userinput").innerHTML) {
-    //     return document.getElementById("userinput").innerHTML = allWord[questWord];
-    // }
-    // else{
-    //     return document.getElementById("userinput").innerHTML = allWord[questWord];
-    // };
 
 </script>
 
