--- a/temp_ari.html
+++ b/temp_ari.html
@@ -3,12 +3,52 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Libre+Barcode+128+Text&family=Libre+Barcode+39+Text&display=swap"
+        rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/led-digital-7" rel="stylesheet">
+    <title>Hangman x Hangman</title>
 </head>
 
 <body>
-    <div id="text">
+    <header>
+        <h1>HANGMAN X HANGMAN</h1>
 
+        <!-- life bar -->
+        <span id="life">
+            <div id="life-count">6</div>
+            <img src="./img/life.png" alt="life" width="80px">
+        </span>
+    </header>
+
+    <div class="container">
+        <!-- list of letters -->
+        <div class="letters-list">
+            <div id="letter-1"><input type="text" maxlength="1" pattern="[A-Za-z]{1}"></div>
+            <div id="letter-2"><input type="text" maxlength="1" pattern="[A-Za-z]{1}"></div>
+            <div id="letter-3"><input type="text" maxlength="1" pattern="[A-Za-z]{1}"></div>
+            <div id="letter-4"><input type="text" maxlength="1" pattern="[A-Za-z]{1}"></div>
+            <div id="letter-5"><input type="text" maxlength="1" pattern="[A-Za-z]{1}"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <img id="hangman-img" src="./img/hangman.png" alt="hangman" width="250px">
+    </div>
+
+    <div class="container">
+        <button type="submit" id="guess" class="btn">GUESS</button>
+    </div>
+
+    <!-- game over screen -->
+    <div class="gameover-wrapper">
+        <div class="gameover">
+            <h1>YOU LOSE</h1>
+            <button type="button" id="replay" class="btn">PLAY AGAIN</button>
+        </div>
     </div>
 </body>
 <script>
@@ -31,7 +71,7 @@
         let regExp = /^[A-Za-z]+$/;
         allWord = allWord.filter(word => word.length == playCondition[1]); //set 字數
         allWord = allWord.map(word => word.toUpperCase()); // set 全大階
-        console.log("字串長度為"+playCondition[1]+"字量："+allWord.length); //check字數
+        console.log("字串長度為" + playCondition[1] + "字量：" + allWord.length); //check字數
 
         if (playCondition[3]) {
             allWord = allWord.filter(word => {
@@ -41,7 +81,7 @@
                     return false;
                 }
             });//set all eng
-        } else if(playCondition[3]){
+        } else if (playCondition[3]) {
             allWord = allWord.filter(word => {
                 if (regExp.test(word)) {
                     return false;
@@ -50,12 +90,13 @@
                 }
             });//set !eng
         }
-        console.log(playCondition[2]+" "+playCondition[3]+"字量: "+allWord.length); //check字數
+        console.log(playCondition[2] + " " + playCondition[3] + "字量: " + allWord.length); //check字數
 
         questWord = Math.floor(Math.random() * allWord.length);
-        console.log("random result: "+allWord[questWord]);
+        console.log("random result: " + allWord[questWord]);
     }
 
 </script>
+<script src="./javascript/letters-validation.js" type="text/javascript"></script>
 
 </html>
