random list of letters & hints of letters

--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
     <div class="container">
         <!-- list of letters -->
         <div class="letters-list">
-            <div id="letter-0"><input id="id-0" data-id="0" class="letter-input" type="text" maxlength="1"></div>
-            <div id="letter-1"><input id="id-1" data-id="1" class="letter-input" type="text" maxlength="1"></div>
-            <div id="letter-2"><input id="id-2" data-id="2" class="letter-input" type="text" maxlength="1"></div>
-            <div id="letter-3"><input id="id-3" data-id="3" class="letter-input" type="text" maxlength="1"></div>
-            <div id="letter-4"><input id="id-4" data-id="4" class="letter-input" type="text" maxlength="1"></div>
+            <!-- there will generate several list of letters by JavaScript -->
         </div>
     </div>
 
