--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" type="text/css">
 
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,28 +22,27 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
-
-
-            <!-- life bar -->
+    <header class="d-flex justify-content-center">
+        <!-- <div class="d-flex justify-content-center">
             <div class="row">
-                    <div class="col-12">
-                        <span id="life">
-                            <div id="life-count"></div>
-                            <img src="./img/life.png" alt="life" width="80px">
-                        </span>
-                    </div>
+                <div class="col-12">
+                    <h1>HANGMAN X HANGMAN</h1>
                 </div>
-
-                <div class="row">
-                    <div class="col-12">
-                        <h1>HANGMAN X HANGMAN</h1>
-                    </div>        
+            </div>
+            <div class="row">
+                <div class="col-12 mx-4 px-4">
+                    <span id="life">
+                        <div id="life-count"></div>
+                        <img src="./img/life.png" alt="life" width="80px">
+                    </span>
                 </div>
-        </div>
-        
-
+            </div>
+        </div> -->
+        <span id="life">
+            <div id="life-count"></div>
+            <img src="./img/life.png" alt="life" width="80px">
+        </span>
+        <h1>HANGMAN X HANGMAN</h1>
     </header>
 
     <div class="container">
@@ -53,28 +53,32 @@
     </div>
 
     <div class="container">
-        <img id="hangman-img" src="./img/hangman.png" alt="hangman" width="250px">
+        <img id="hangman-img" src="./img/hangman.png" alt="hangman">
     </div>
 
     <div class="container">
-        <button type="submit" id="guess" class="btn">GUESS</button>
+        <button type="submit" id="guess" class="btn btn-primary">GUESS</button>
     </div>
 
     <!-- game over screen -->
     <div class="gameover-wrapper">
         <div class="gameover">
             <h1 id="gameover-result"></h1>
-            <button type="button" id="replay" class="btn">PLAY AGAIN</button>
+            <button type="button" id="replay" class="btn btn-primary">PLAY AGAIN</button>
         </div>
     </div>
 </body>
 
 <script src="./javascript/letters-validation.js" type="text/javascript"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
+<!-- Option 2: Separate Popper and Bootstrap JS -->
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+    crossorigin="anonymous"></script>
 
 
 </html>
