font-family updated

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 <body>
     <header class="d-flex justify-content-center">
+        <!-- smartphone -->
         <!-- <div class="d-flex justify-content-center">
             <div class="row">
                 <div class="col-12">
@@ -38,6 +39,7 @@
                 </div>
             </div>
         </div> -->
+        <!-- desktop -->
         <span id="life">
             <div id="life-count"></div>
             <img src="./img/life.png" alt="life" width="80px">
